taxi order funct

--- a/order.html
+++ b/order.html
@@ -46,7 +46,7 @@
 									<div class="order__inputs">
 										<label>
 											<span>Адрес и дом<sup>*</sup></span>
-											<input type="text" name="from-adress" data-type="adress" >
+											<input type="text" name="from-adress" data-type="adress" required>
 										</label>
 										<label>
 											<span>Квартира</span>
@@ -59,7 +59,7 @@
 									<div class="order__inputs">
 										<label>
 											<span>Адрес и дом<sup>*</sup></span>
-											<input type="text" name="to-adress" data-type="adress" >
+											<input type="text" name="to-adress" data-type="adress" required>
 										</label>
 										<label>
 											<span>Квартира</span>
@@ -71,7 +71,7 @@
 										</label>
 										<label>
 											<span>Имя <sup>*</sup></span>
-											<input type="text" name="to-name" >
+											<input type="text" name="to-name" required>
 										</label>
 										<label>
 											<span>Телефон <sup>*</sup></span>
